--- a/modulo-03/exercicios/ex022/fundo006.html
+++ b/modulo-03/exercicios/ex022/fundo006.html
@@ -9,12 +9,19 @@
 <style>
     body {
         height: 100vh;
+        /*
         background-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center top;
         background-repeat: no-repeat;
-        background-size: cover; /* contain, auto, ou px */
+        background-size: cover; /* contain, auto, ou px 
         background-attachment: fixed;
+        
+        shorthand - background 
+        color > image > position > [size] > attachament
+        */
+        background: black url(imagens/wallpaper002.jpg) center top no-repeat fixed;
+        background-size: cover;
     }
 
     main {
