update exercises with iframe

--- a/modulo-04/ex024/iframe002.html
+++ b/modulo-04/ex024/iframe002.html
@@ -23,7 +23,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum at asperiores expedita velit earum modi! Dolore necessitatibus explicabo, aut sint porro omnis laborum maxime alias nulla aspernatur blanditiis, quaerat quisquam.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. A saepe fugiat facere inventore doloribus praesentium, labore modi deleniti nisi ea distinctio eos expedita ipsa molestiae dolorem voluptates dolores explicabo deserunt?
     </p>
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0"></iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam magnam praesentium repellat totam perspiciatis saepe, maxime, officia nisi enim sapiente minima ipsam officiis dolorum pariatur placeat vitae! Iste, aut qui?
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, iste, facilis rerum a voluptatem perspiciatis fugiat harum soluta quas porro deserunt tenetur hic perferendis consequatur distinctio enim vel ullam veniam.
     </p>
